# zippy

./: README.md  build.py  main.py  nuitka-crash-report.xml  pyproject.toml  test.txt
Tests/: run_compression_tests.py  test_api.py  test_app.py  test_cli.py  test_compression.py  test_config.py  test_core.py  test_data_generator.py  test_feature_flags.py  test_integration.py  test_main.py  test_progress.py  test_utils.py
src/: api.py  cli.py  config.py  core.py  feature_flags.py  main.py  progress.py  utils.py
