[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zippy"
version = "0.1.0"
description = "A simple zip/unzip utility with a modern dark UI."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
dependencies = [
    "customtkinter>=5.2.0", # For the UI
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.2",
    "psutil>=5.9.5", # For resource monitoring
]

[project.scripts]
zip-app = "zip_utility.main:run_app" # Allows running 'zip-app' after installation

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

# --- Tool Configurations ---

[tool.hatch.build.targets.wheel]
packages = ["src/zip_utility"] # Tell hatch where the package source is

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src --cov-report=term-missing" # Run tests quietly, show summary, add coverage
testpaths = [
    "Tests",
]
pythonpath = ["."]

[tool.coverage.run]
source = ["src"] # Specify source for coverage

[tool.coverage.report]
fail_under = 20 # Temporarily reduced from 80% to allow tests to pass
show_missing = true

[tool.uv]
# You can add uv-specific configurations here if needed in the future