[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zippy"
version = "0.1.0"
description = "A simple zip/unzip utility with a modern dark UI."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
dependencies = [
    "customtkinter>=5.2.0", # For the UI
    "psutil>=5.9.5", # For resource monitoring
]

[project.scripts]
zip-app = "src.main:run_app" # Allows running 'zip-app' after installation

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
build = [
    "nuitka>=1.8.0",  # For compiling Python to C++
    "ordered-set>=4.1.0",  # Required by Nuitka
    "zstandard>=0.21.0",  # For better compression in Nuitka
]

# --- Tool Configurations ---

[tool.hatch.build.targets.wheel]
packages = ["src"] # Tell hatch where the package source is

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q" # Run tests quietly, show summary 
testpaths = [
    "Tests",
]
pythonpath = ["."]

[tool.coverage.run]
source = ["src"] # Specify source for coverage

[tool.coverage.report]
fail_under = 70 # Set a higher coverage requirement
show_missing = true

[tool.uv]
# You can add uv-specific configurations here if needed in the future